# tobi-flumaion-python-assessment

./: .gitignore  Dockerfile.api  Dockerfile.script  README.md  pyproject.toml
src/: app.py  main.py
src/core/: config.py  db.py
src/interfaces/: repository.py
src/models/: employee.py
src/repository/: employee.py
src/routes/: employee.py  routes.py
src/schemas/: employee.py
src/scripts/: employee.py
src/services/: retirement_service.py
src/utils/: logger.py  utils.py
tests/: conftest.py
tests/test_api/: test_employee_route.py
tests/test_repostory/: test_employee.py
tests/test_script/: test_main.py
tests/test_service/: test_retirement_service.py
